@@ -574,8 +574,9 @@ static GdkPixbuf* _vfs_thumbnail_load( const char* file_path, const char* uri,
 #endif
     strcpy( ( file_name + 32 ), ".png" );
 
-    thumbnail_file = g_build_filename( g_get_home_dir(),
-                                       ".thumbnails/normal",
+    thumbnail_file = g_build_filename( g_get_user_cache_dir(), "thumbnails",
+                                       create_size <= 128 ? "normal" :
+                                                            "large",
                                        file_name, NULL );
 
     if( G_UNLIKELY( 0 == mtime ) )
@@ -700,12 +701,18 @@ GdkPixbuf* vfs_thumbnail_load_for_file( const char* file, int size,
 void vfs_thumbnail_init()
 {
     char* dir;
-    dir = g_build_filename( g_get_home_dir(), ".thumbnails/normal", NULL );
+    dir = g_build_filename( g_get_user_cache_dir(), "thumbnails/normal", NULL );
 
     if( G_LIKELY( g_file_test( dir, G_FILE_TEST_IS_DIR ) ) )
         chmod( dir, 0700 );
     else
         g_mkdir_with_parents( dir, 0700 );
+    g_free( dir );
+    dir = g_build_filename( g_get_user_cache_dir(), "thumbnails/large", NULL );
 
+    if( G_LIKELY( g_file_test( dir, G_FILE_TEST_IS_DIR ) ) )
+        chmod( dir, 0700 );
+    else
+        g_mkdir_with_parents( dir, 0700 );
     g_free( dir );
 }
